# cfx-gamepad-jni

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-snapshot.sh  build.gradle  build_jar.bat  build_jar.sh  gradle.properties  jitpack.yml  publish-release.sh  publish_release.bat  publish_release.sh  settings.gradle
prebuilt/: build-jni-linux.sh  build-jni-windows.bat  build-jni.sh  build-sdl3-linux.sh  build-sdl3-macos.sh  build-sdl3-windows.bat  build-sdl3.sh  build_native.sh  build_sdl_input_only.bat  build_sdl_input_only.sh
prebuilt/jni/darwin-aarch64/: libgamepadjni.dylib
prebuilt/jni/darwin-x86_64/: libgamepadjni.dylib
prebuilt/sdl/darwin-aarch64/: libSDL3.0.dylib
prebuilt/sdl/darwin-x86_64/: libSDL3.0.dylib
src/main/c/: gamepad_jni.c  gamepad_jni_macos.m
src/main/java/com/ifels/gamepadjni/: Gamepad.java  GamepadAxis.java  GamepadButton.java  GamepadButtonLabel.java  GamepadJNI.java  GamepadLog.java  GamepadManager.java  GamepadType.java  JoystickConnectionState.java  NativeLibraryLoader.java  PowerState.java
